Update Mobile Hamburger

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
                         <li><a href="#menu" class="nav-link">Menu</a></li>
                         <li><a href="#about" class="nav-link">About</a></li>
                         <li><a href="#contact" class="nav-link">Contact</a></li>
+                        <!-- Mobile Only Links -->
+                        <li class="mobile-only"><a href="cart.html" class="nav-link">
+                            <i class="fas fa-shopping-cart"></i> Cart <span class="mobile-badge" id="cartBadgeMobile">0</span>
+                        </a></li>
+                        <li class="mobile-only"><a href="wishlist.html" class="nav-link">
+                            <i class="fas fa-heart"></i> Wishlist <span class="mobile-badge" id="wishlistBadgeMobile">0</span>
+                        </a></li>
+                        <li class="mobile-only">
+                            <button class="nav-link theme-toggle-mobile" id="themeToggleMobile">
+                                <i class="fas fa-moon"></i> <span id="themeTextMobile">Dark Mode</span>
+                            </button>
+                        </li>
                     </ul>
                     
                     <div class="nav-icons">
